fix robot and program overflowing text

--- a/src/games/automata/components/Creature.css
+++ b/src/games/automata/components/Creature.css
@@ -44,7 +44,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 10px;
-    overflow: auto;
     text-align: center;
     line-height: 100%;
     margin: 0px;
