--- a/src/games/automata/components/Program.css
+++ b/src/games/automata/components/Program.css
@@ -13,7 +13,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 8px;
-    overflow: auto;
     text-align: center;
     line-height: 100%;
     margin: 0px;
@@ -30,7 +29,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 8px;
-    overflow: auto;
     text-align: center;
     line-height: 100%;
     margin: 0px;
